[package]
name = "ester"
version = "0.1.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ester"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[features]
debug-print = []
